syntax = "proto3";

package bonanza.configuration.mount_directory;

import "bonanza.build/pkg/proto/configuration/model/parser/parser.proto";
import "bonanza.build/pkg/proto/model/core/core.proto";
import "bonanza.build/pkg/proto/model/encoding/encoding.proto";
import "bonanza.build/pkg/proto/storage/object/object.proto";
import "github.com/buildbarn/bb-remote-execution/pkg/proto/configuration/filesystem/virtual/virtual.proto";
import "github.com/buildbarn/bb-storage/pkg/proto/configuration/global/global.proto";
import "github.com/buildbarn/bb-storage/pkg/proto/configuration/grpc/grpc.proto";

option go_package = "bonanza.build/pkg/proto/configuration/mount_directory";

message ApplicationConfiguration {
  buildbarn.configuration.global.Configuration global = 1;

  buildbarn.configuration.filesystem.virtual.MountConfiguration mount = 2;

  bonanza.configuration.model.parser.ParsedObjectPool parsed_object_pool = 3;

  buildbarn.configuration.grpc.ClientConfiguration grpc_client = 4;

  bonanza.storage.object.Namespace namespace = 5;

  bonanza.model.core.WeakDecodableReference root_directory_reference = 6
      [(bonanza.model.core.object_format) = {
        proto_type_name:
          "bonanza.model.filesystem.DirectoryContents";
      }];

  repeated bonanza.model.encoding.BinaryEncoder directory_encoders = 7;

  repeated bonanza.model.encoding.BinaryEncoder small_file_encoders = 8;

  repeated bonanza.model.encoding.BinaryEncoder concatenated_file_encoders = 9;
}
